# datalus

./: .gitignore  CITATION.cff  README.md  README_pt-BR.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/workflows/: ci.yml
datalus/: __init__.py  audit.py  cli.py  diffusion.py  preprocessing.py  training.py
datalus/application/: __init__.py  audit.py
datalus/domain/: schemas.py
datalus/infrastructure/: checkpointing.py  encoding.py  polars_preprocessing.py  torch_nn.py
datalus/interfaces/: api.py  cli.py
deploy/api/: main.py
deploy/docker/: Dockerfile.api  Dockerfile.streamlit
docker/: Dockerfile.api  Dockerfile.streamlit
eval/: privacy.py  utility.py
frontend/: __init__.py
frontend/component/: index.html  package-lock.json  package.json
frontend/component/src/: index.tsx
frontend/streamlit/: __init__.py  app.py  component.py
notebooks/00_datasus_poc_quickstart/en/: 00_datasus_poc_quickstart_en.ipynb
notebooks/00_datasus_poc_quickstart/pt-br/: 00_datasus_poc_quickstart_pt_BR.ipynb
notebooks/01_datalus_training_factory/en/: 01_datalus_training_factory_en.ipynb
notebooks/01_datalus_training_factory/pt-br/: 01_datalus_training_factory_pt_BR.ipynb
pipelines/: train.py
src/auto_prep/: preprocessor.py
src/datalus/: __init__.py  _console.py
src/datalus/application/: audit.py  (+2 more)
src/diffusion/: tab_ddpm.py
src/nn/: embeddings.py  mlp.py
tests/: test_audit.py  test_checkpointing.py  test_diffusion.py  test_export_api.py  test_preprocessing_encoding.py
(+18 files in other folders)
