[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datalus"
version = "1.0.0"
description = "Diffusion-Augmented Tabular Architecture for Local Utility and Security"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Emanuel Lázaro Custódio Silva", email = "emanuellzr01@outlook.com" }]
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.2",
  "pyarrow>=16",
  "polars>=1.0",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "scikit-learn>=1.4",
  "joblib>=1.3",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "typer>=0.12",
]

[project.optional-dependencies]
audit = ["lightgbm>=4.3", "catboost>=1.2"]
frontend = ["streamlit>=1.36"]
training = ["torch>=2.3", "onnx>=1.16", "onnxruntime>=1.18", "onnxscript>=0.1"]
test = ["pytest>=8.2", "httpx>=0.27"]
dev = [
  "lightgbm>=4.3",
  "catboost>=1.2",
  "streamlit>=1.36",
  "torch>=2.3",
  "onnx>=1.16",
  "onnxruntime>=1.18",
  "onnxscript>=0.1",
  "pytest>=8.2",
  "httpx>=0.27",
]

[project.scripts]
datalus = "datalus.interfaces.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["datalus*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
